--- a/src/app/components/task-list/list.html
+++ b/src/app/components/task-list/list.html
@@ -1,9 +1,9 @@
 <div class="task-card">
   <p class="h5 d-flex justify-content-center mt-2">{{status}}</p>
-  <app-search-task [target]="status"> </app-search-task>
+  <app-search-task [target]="status" (search)="search($event)"> </app-search-task>
   <hr />
    
-  @for (task of tasks(); track $index) {
+  @for (task of filteredTasks(); track $index) {
     <app-task [data]="task" [status] = "status"></app-task>
   }
   
