adding mark feature , adding spinner

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,14 +1,14 @@
+@if(spinner()){
+<app-spinner></app-spinner>
+}
 <div class="container">
   <div class="row d-flex justify-content-center mt-2">
-
     <div class="col-md-4 m-2">
-      <app-list status = "Pending"></app-list>
+      <app-list status="Pending"></app-list>
     </div>
 
     <div class="col-md-4 m-2">
-      <app-list status = "Done"></app-list>
+      <app-list status="Done"></app-list>
     </div>
- 
-    
   </div>
 </div>
