--- a/src/app/components/task/task.html
+++ b/src/app/components/task/task.html
@@ -3,7 +3,8 @@
     
     <img
       class="action-icon"
-      src="https://cdn-icons-png.flaticon.com/512/8832/8832108.png"
+      [src] = "markIcon" 
+      (click)="markTask()"
     />
   </div>
   
