add task feature

--- a/src/app/components/add-task/add-task.html
+++ b/src/app/components/add-task/add-task.html
@@ -1,7 +1,11 @@
 <div class="row m-1 add-task">
-    <input class="col-10" type="text" placeholder="Add New task">
-    <div class="spinner-border" role="status" style="display: none;" id="spinner-icon">
-      <span class="visually-hidden">Loading...</span>
-    </div>
-    <img src="https://cdn-icons-png.flaticon.com/512/736/736161.png" alt="send" class="col-2 icon-image" onClick="addToDo(event)" id="add-to-do">
+    <input class="col-10" type="text" placeholder="Add New task" [(ngModel)]="task">
+    @if (isLoading) {
+      <div class="spinner-border" role="status" id="spinner-icon">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    }
+    @else {
+      <img src="https://cdn-icons-png.flaticon.com/512/736/736161.png" alt="send" class="col-2 icon-image" (click)="addTask()" id="add-to-do">
+    }
 </div>
