--- a/src/app/components/task-list/list.html
+++ b/src/app/components/task-list/list.html
@@ -1,15 +1,19 @@
 <div class="task-card">
-  <p class="h5 d-flex justify-content-center mt-2">{{status}}</p>
-  <app-search-task [target]="status" (search)="search($event)"> </app-search-task>
+  <p class="h5 d-flex justify-content-center mt-2">{{ status }}</p>
+  <app-search-task [target]="status" (search)="search($event)">
+  </app-search-task>
   <hr />
-   
-  @for (task of filteredTasks(); track $index) {
-    <app-task [data]="task" [status] = "status"></app-task>
-  }
-  
+
+  <div id="toDoGroup">
+    @for (task of filteredTasks(); track $index) {
+    <div class="task">
+      <app-task [data]="task" [status]="status"></app-task>
+    </div>
+    }
+  </div>
 
   @if(status === 'Pending') {
-    <app-add-task></app-add-task>
-   
+  <app-add-task></app-add-task>
+
   }
 </div>
