--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,9 @@
 @if(spinner()){
 <app-spinner></app-spinner>
 }
+@if (errorMessage()){
+  <app-error-modal></app-error-modal>
+}
 <div class="container">
   <div class="row d-flex justify-content-center mt-2">
     <div class="col-md-4 m-2">
